# mesh

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  STATUS-UPDATE.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  sitemap.xml
.claude/: PROJECT-MANAGEMENT.md  memory-init.json
.claude/commands/: README.md  commit.md  pm-blockers.md  pm-next.md  pm-report.md  pm-status.md  pm-validate.md
.claude/scripts/: load-memory.md
.claude/skills/: README.md  ansible-dev.md  batman-mesh.md  diagram-generator.md  docker-dev.md  github-pm.md  mesh-pm.md  mesh-test.md  openwrt-config.md  project-standards.md  python-test.md  skills-index.md  svg-diagrams.md  tech-docs.md
.github/: project-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  enhancement.md  phase-task.md  test-implementation.md
.github/workflows/: README.md  deploy-docs.yml  pre-commit.yml  project-automation.yml  tests.yml
ANSIBLE-QUICKSTART/: index.html
CONTRIBUTING/: index.html
DISTRIBUTED-SYSLOG/: index.html
ENV-CONFIGURATION/: index.html
FACTORY-RESET-PASSWORD-PERSISTENCE/: index.html
FULL-ARCHIVE-MODE/: index.html
GITHUB-COMPLETE-SETUP/: index.html
GITHUB-SETUP/: index.html
IMAGE-BUILDER/: index.html
INITIAL-NODE-SETUP/: index.html
LOCAL-PACKAGE-REPOSITORY/: index.html
LOCAL-REPO-IMPLEMENTATION/: index.html
MONITORING/: index.html
MULTI-NETWORK-ARCHITECTURE/: index.html
NODE-AUDIT/: index.html
PRE-COMMIT-HOOKS/: index.html
PROJECT-MANAGEMENT/: index.html
PROJECT-STATUS/: index.html
RECOMMENDED-MONITORING-ALERTING/: index.html
RECOVERY/: index.html
SSH-KEY-AUTHENTICATION/: index.html
STATUS-UPDATE/: index.html
SWITCH-INTEGRATION/: index.html
USB-STORAGE/: index.html
WALKTHROUGH/: index.html
_archive/PROJECT-MANAGEMENT/: index.html
_archive/PROJECT-STATUS/: index.html
_archive/STATUS-UPDATE/: index.html
_archive/WALKTHROUGH/: index.html
advanced/: index.html
advanced/full-archive/: index.html
advanced/image-builder/: index.html
advanced/local-repository/: index.html
advanced/monitoring-alerting/: index.html
advanced/repo-implementation/: index.html
architecture/: index.html
architecture/batman-mesh/: index.html
architecture/network-topology/: index.html
architecture/overview/: index.html
architecture/switch-integration/: index.html
architecture/vlan-architecture/: index.html
deployment/: index.html
deployment/configuration/: index.html
deployment/ssh-keys/: index.html
development/: index.html
development/GITHUB-COMPLETE-SETUP/: index.html
development/GITHUB-SETUP/: index.html
development/contributing/: index.html
development/docker/: index.html
development/docker-mcp/: index.html
development/pre-commit/: index.html
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage-ssh-keys.sh  requirements.txt  setup-semaphore.sh
docker-README/: index.html
docs/: ANSIBLE-QUICKSTART.md  CONTRIBUTING.md  FACTORY-RESET-PASSWORD-PERSISTENCE.md  GITHUB-COMPLETE-SETUP.md  GITHUB-SETUP.md  INITIAL-NODE-SETUP.md  LOCAL-PACKAGE-REPOSITORY.md  LOCAL-REPO-IMPLEMENTATION.md  MULTI-NETWORK-ARCHITECTURE.md  NODE-AUDIT.md  PRE-COMMIT-HOOKS.md  PROJECT-STATUS.md  STATUS-UPDATE.md  SWITCH-INTEGRATION.md  WALKTHROUGH.md  docker-README.md  index.md  openwrt-batman-mesh-setup.md  philosophy.md  raspberry-pi-image-creation.md  tests-README.md
getting-started/: index.html
openwrt-batman-mesh-setup/: index.html
openwrt-mesh-ansible/: .gitignore  Makefile  README.md  REFACTORING-SUMMARY.md  ansible.cfg
operations/: index.html
philosophy/: index.html
raspberry-pi-image-creation/: index.html
reference/: index.html
scripts/: run-live-tests.sh  setup-dev-environment.sh  switch_eth_address.sh
search/: search_index.json
test-reports/: live-tests-report.html
tests/: __init__.py  conftest.py  requirements.txt
tests-README/: index.html
troubleshooting/: index.html
validate/: __init__.py  __main__.py  config.py
(+220 files in other folders)
