[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is primarily Ansible/test configuration, not a Python package
# Explicitly specify no packages to avoid auto-discovery issues
packages = []

[project]
name = "openwrt-mesh-network"
version = "1.0.0"
description = "High-availability OpenWrt mesh network with Batman-adv"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
]

dependencies = [
    "ansible>=8.0.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "netaddr>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-glightbox>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mesh"
Documentation = "https://yourusername.github.io/mesh/"
Repository = "https://github.com/yourusername/mesh"
Issues = "https://github.com/yourusername/mesh/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --maxfail=5
"""
# Show captured stdout/stderr on failures
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "unit: Unit tests (fast, no network)",
    "integration: Integration tests (require nodes)",
    "functional: Functional tests (end-to-end)",
    "performance: Performance benchmarks",
    "failover: Failover scenario tests",
    "slow: Tests taking > 10 seconds",
    "live: Live network tests (require running nodes)",
    "wlan2: Tests requiring wlan2 adapter",
    "destructive: Tests that disrupt network connectivity",
    "requires_nodes: Tests requiring physical nodes",
    "infrastructure: Tests for switches and infrastructure devices (10.11.10.x)",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
good-names = ["i", "j", "k", "ex", "Run", "_", "ip"]
